--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -596,8 +596,8 @@
                 "last_seen": "最后见面",
                 "join_count": "见面的次数",
                 "time_together": "一起游玩的时长",
-                "play_time": "Play Time",
-                "online_for": "在线时长",
+                "play_time": "总在线时长",
+                "online_for": "本次在线时长",
                 "offline_for": "离线时长",
                 "last_activity": "最后活动",
                 "last_login": "最后登录",
